--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -31,7 +31,7 @@ function sum(num1, num2) {
 
 - add函数不是一个纯函数；
 - 函数依赖一个外部的变量，变量发生改变时，会影响：确定的输入，产生确定的输出；
-- 能否改进成纯函数呢？const foo = 5; 即可
+- 能否改进成纯函数呢？`const foo = 5;` 即可
 
 ```js
 let foo = 5;
@@ -62,7 +62,7 @@ function printInfo(info) {
 为什么纯函数在函数式编程中非常重要呢？
 
 - 因为你可以`安心的写`和`安心的用`；
-- 你在写的时候保证了函数的纯度，只是但是实现自己的业务逻辑即可，不需要关心传入的内容或者依赖其他的外部变量；
+- 你在写的时候保证了函数的纯度，只是实现自己的业务逻辑即可，不需要关心传入的内容或者依赖其他的外部变量；
 - 你在用的时候，你确定你的输入内容不会被任意篡改，并且自己确定的输入，一定会有确定的输出；
 
 React中就要求我们无论是函数还是class声明一个组件，这个组件都必须像纯函数一样，保护它们的props不被修改：
@@ -514,7 +514,7 @@ src
 ### 8.2.2创建store入口文件
 
 ```js
-// store/index.js
+/* store/index.js */
 // 导出创建store的函数
 import { createStore } from 'redux';
 // 导入reducer
@@ -591,7 +591,7 @@ export default class About extends PureComponent {
   }
 
   componentDidMount() {
-      //监听store
+      // 监听store
     this.unsubscribue = store.subscribe(() => {
       this.setState({
         counter: store.getState().counter
@@ -600,7 +600,7 @@ export default class About extends PureComponent {
   }
 
   componentWillUnmount() {
-      //取消监听
+      // 取消监听
     this.unsubscribue();
   }
 
@@ -787,9 +787,9 @@ export function connect(mapStateToProps, mapDispachToProp) {
 
 比如home.js中进行如下修改：
 
-- mapStateToProps：用于将state映射到一个对象中，对象中包含我们需要的属性；
+- `mapStateToProps`：用于将state映射到一个对象中，对象中包含我们需要的属性；
 
-- mapDispatchToProps：用于将dispatch映射到对象中，对象中包含在组件中可能操作的函数；
+- `mapDispatchToProps`：用于将dispatch映射到对象中，对象中包含在组件中可能操作的函数；
   - 当调用该函数时，本质上其实是调用dispatch(对应的Action)；
 
 
@@ -816,11 +816,11 @@ class Home extends PureComponent {
     )
   }
 }
-//用于将state映射到一个对象中
+// 用于将state映射到一个对象中
 const mapStateToProps = state => ({
   counter: state.counter
 })
-//用于将dispatch映射到对象中
+// 用于将dispatch映射到对象中
 const mapDispatchToProps = dispatch => ({
   increment() {
     dispatch(incAction());
@@ -1223,7 +1223,7 @@ const changeRecommendsAction = (recommends) => ({
 })
 ```
 
-### 10.1.2组件中代码代码修改
+### 10.1.2组件中代码修改
 
 1. Home组件：
 
@@ -1418,7 +1418,6 @@ import { connect } from "react-redux";
 import {
   addAction,
   getHomeMultidataAction
-    
 } from '../store/actionCreators';
 
 class Home extends PureComponent {
@@ -1591,7 +1590,7 @@ sagaMiddleware.run(mySaga);
 export default store;
 ```
 
-3. saga.js文件的编写：
+3. saga.js文件的编写
 
 - takeEvery：可以传入多个监听的actionType，每一个都可以被执行（对应有一个takeLastest，会取消前面的）
 - put：在saga中派发action不再是通过dispatch，而是通过put；
@@ -1620,11 +1619,78 @@ function* fetchHomeMultidata(action) {
 }
 
 function* mySaga() {
+  // takeEvery函数中传入监听action的type
   yield takeEvery(FETCH_HOME_MULTIDATA, fetchHomeMultidata)
+  // takeLatest takeEvery区别:
+  // takeLatest: 依次只能监听一个对应的action
+  // takeEvery: 每一个都会被执行
+  // takeLatest(ADD_NUMBER, fetchHomeMultidata),
+  /*监听多个*/
+  yield all([
+    takeEvery(FETCH_HOME_MULTIDATA, fetchHomeMultidata),
+    // takeLatest(ADD_NUMBER, fetchHomeMultidata),
+  ]);
 }
 
 export default mySaga;
 ```
+
+4. redux-saga的使用
+
+```js
+import React, { PureComponent } from 'react';
+
+// import {connect} from '../utils/connect';
+import { connect } from 'react-redux';
+
+
+import {
+  incAction,
+  addAction
+} from '../store/counter/actionCreators';
+import {
+  fetchHomeMultidataAction
+} from '../store/home/actionCreators';
+
+class Home extends PureComponent {
+  componentDidMount() {
+    this.props.getHomeMultidata();
+  }
+
+  render() {
+    return (
+      <div>
+        <h1>Home</h1>
+        <h2>当前计数: {this.props.counter}</h2>
+        <button onClick={e => this.props.increment()}>+1</button>
+        <button onClick={e => this.props.addNumber(5)}>+5</button>
+      </div>
+    )
+  }
+}
+
+const mapStateToProps = state => ({
+  counter: state.counterInfo.counter
+})
+
+const mapDispatchToProps = dispatch => ({
+  increment() {
+    dispatch(incAction());
+  },
+  addNumber(num) {
+    dispatch(addAction(num));
+  },
+  getHomeMultidata() {
+    dispatch(fetchHomeMultidataAction);
+  }
+})
+
+export default connect(mapStateToProps, mapDispatchToProps)(Home);
+```
+
+
+
+
 
 ## 10.5中间件的原理
 
@@ -1656,15 +1722,16 @@ console.log("new state:", store.getState());
 
 是否有一种更优雅的方式来处理这样的相同逻辑呢？
 
-- 我们可以将代码封装到一个独立的函数中
+- 我们可以将代码封装到一个独立的函数中：
 
 ```js
+// 打印日志的函数
 function dispatchAndLog(action) {
   console.log("dispatching:", action);
   store.dispatch(action);
   console.log("新的state:", store.getState());
 }
-//调用
+// 调用
 dispatchAndLog(addAction(10));
 ```
 
@@ -1896,12 +1963,315 @@ function reducer(state = initialState, action) {
 └── saga.js
 ```
 
-这里不再给出代码，每个文件中存放的内容即可：
+### 11.2.1counter相关store
 
-- home/actioncreators.js：存放home相关的action；
-- home/constants.js：存放home相关的常量；
-- home/reducer.js：存放分离的reducer代码；
-- index.js：统一对外暴露的内容；
+1. constants.js
+
+```js
+export const ADD_NUMBER = "ADD_NUMBER";
+export const SUB_NUMBER = "SUB_NUMBER";
+export const INCREMENT = "INCREMENT";
+export const DECREMENT = "DECREMENT";
+```
+
+2. reducer.js
+
+```js
+import {
+  ADD_NUMBER,
+  SUB_NUMBER,
+  INCREMENT,
+  DECREMENT
+} from './constants.js';
+
+// 拆分counterReducer
+const initialCounterState = {
+  counter: 0
+}
+function counterReducer(state = initialCounterState, action) {
+  switch (action.type) {
+    case ADD_NUMBER:
+      return { ...state, counter: state.counter + action.num };
+    case SUB_NUMBER:
+      return { ...state, counter: state.counter - action.num };
+    case INCREMENT:
+      return { ...state, counter: state.counter + 1 };
+    case DECREMENT:
+      return { ...state, counter: state.counter - 1 };
+    default:
+      return state;
+  }
+}
+
+export default counterReducer;
+```
+
+3. actioncreators.js
+
+```js
+import {
+  ADD_NUMBER,
+  SUB_NUMBER,
+  INCREMENT,
+  DECREMENT,
+} from './constants.js';
+
+export const addAction = num => ({
+  type: ADD_NUMBER,
+  num
+});
+
+export const subAction = num => ({
+  type: SUB_NUMBER,
+  num
+});
+
+export const incAction = () => ({
+  type: INCREMENT
+});
+
+export const decAction = () => ({
+  type: DECREMENT
+});
+```
+
+4. index.js
+
+```js
+import reducer from './reducer';
+export { reducer }
+```
+
+### 11.2.2home相关store
+
+1. constants.js
+
+```js
+export const FETCH_HOME_MULTIDATA = "FETCH_HOME_MULTIDATA";
+export const CHANGE_BANNERS = "CHANGE_BANNERS";
+export const CHANGE_RECOMMEND = "CHANGE_RECOMMEND";
+```
+
+2. reducer.js
+
+```js
+import {
+  CHANGE_BANNERS,
+  CHANGE_RECOMMEND
+} from './constants.js';
+
+// 拆分homeReducer
+const initialHomeState = {
+  banners: [],
+  recommends: []
+}
+function homeReducer(state = initialHomeState, action) {
+  switch (action.type) {
+    case CHANGE_BANNERS:
+      return { ...state, banners: action.banners };
+    case CHANGE_RECOMMEND:
+      return { ...state, recommends: action.recommends };
+    default:
+      return state;
+  }
+}
+
+export default homeReducer;
+```
+
+3. actioncreators.js
+
+```js
+import axios from 'axios';
+
+import {
+  CHANGE_BANNERS,
+  CHANGE_RECOMMEND,
+  FETCH_HOME_MULTIDATA
+} from './constants.js';
+
+
+// 轮播图和推荐的action
+export const changeBannersAction = (banners) => ({
+  type: CHANGE_BANNERS,
+  banners
+});
+
+export const changeRecommendAction = (recommends) => ({
+  type: CHANGE_RECOMMEND,
+  recommends
+});
+
+
+// redux-thunk中定义的action函数
+export const getHomeMultidataAction = (dispatch, getState) => {
+  axios({
+    url: "http://123.207.32.32:8000/home/multidata",
+  }).then(res => {
+    const data = res.data.data;
+    dispatch(changeBannersAction(data.banner.list));
+    dispatch(changeRecommendAction(data.recommend.list));
+  })
+}
+
+
+// redux-saga拦截的action
+export const fetchHomeMultidataAction = {
+  type: FETCH_HOME_MULTIDATA
+}
+```
+
+4. Index.js
+
+```js
+import reducer from './reducer';
+export { reducer }
+```
+
+### 11.2.3store入口文件拆分
+
+1. reducer
+
+```js
+import { reducer as counterReducer } from './counter';
+import { reducer as homeReducer } from './home';
+
+import { combineReducers } from 'redux';
+
+// function reducer(state = {}, action) {
+//   return {
+//     counterInfo: counterReducer(state.counterInfo, action),
+//     homeInfo: homeReducer(state.homeInfo, action)
+//   }
+// }
+
+//reducer应该是一个什么类型? function
+const reducer = combineReducers({
+  counterInfo: counterReducer,
+  homeInfo: homeReducer
+});
+
+export default reducer;
+```
+
+2. Saga.js
+
+```js
+import { takeEvery, put, all } from 'redux-saga/effects';
+import axios from 'axios';
+import {
+  FETCH_HOME_MULTIDATA
+} from './home/constants';
+import {
+  changeBannersAction,
+  changeRecommendAction
+} from './home/actionCreators';
+
+function* fetchHomeMultidata(action) {
+  const res = yield axios.get("http://123.207.32.32:8000/home/multidata");
+  const banners = res.data.data.banner.list;
+  const recommends = res.data.data.recommend.list;
+  // yield put(changeBannersAction(banners));
+  // yield put(changeRecommendAction(recommends));
+  yield all([
+    yield put(changeBannersAction(banners)),
+    yield put(changeRecommendAction(recommends))
+  ])
+}
+
+function* mySaga() {
+  // takeLatest takeEvery区别:
+  // takeLatest: 依次只能监听一个对应的action
+  // takeEvery: 每一个都会被执行
+  yield all([
+    takeEvery(FETCH_HOME_MULTIDATA, fetchHomeMultidata),
+    // takeLatest(ADD_NUMBER, fetchHomeMultidata),
+  ]);
+}
+
+export default mySaga;
+```
+
+3. Index.js
+
+```js
+import { createStore, applyMiddleware, compose } from 'redux';
+import thunkMiddleware from 'redux-thunk';
+import createSagaMiddleware from 'redux-saga';
+
+import saga from './saga';
+import reducer from './reducer.js';
+
+// composeEnhancers函数
+const composeEnhancers = window.__REDUX_DEVTOOLS_EXTENSION_COMPOSE__({trace: true}) || compose;
+
+// 应用一些中间件
+// 1.引入thunkMiddleware中间件(上面)
+// 2.创建sagaMiddleware中间件
+const sagaMiddleware = createSagaMiddleware();
+
+const storeEnhancer = applyMiddleware(thunkMiddleware, sagaMiddleware);
+const store = createStore(reducer, composeEnhancers(storeEnhancer));
+
+sagaMiddleware.run(saga);
+
+export default store;
+```
+
+### 11.2.4redux使用
+
+```js
+import React, { PureComponent } from 'react';
+
+// import {connect} from '../utils/connect';
+import { connect } from 'react-redux';
+
+
+import {
+  incAction,
+  addAction
+} from '../store/counter/actionCreators';
+import {
+  fetchHomeMultidataAction
+} from '../store/home/actionCreators';
+
+class Home extends PureComponent {
+  componentDidMount() {
+    this.props.getHomeMultidata();
+  }
+
+  render() {
+    return (
+      <div>
+        <h1>Home</h1>
+        <h2>当前计数: {this.props.counter}</h2>
+        <button onClick={e => this.props.increment()}>+1</button>
+        <button onClick={e => this.props.addNumber(5)}>+5</button>
+      </div>
+    )
+  }
+}
+
+const mapStateToProps = state => ({
+  counter: state.counterInfo.counter
+})
+
+const mapDispatchToProps = dispatch => ({
+  increment() {
+    dispatch(incAction());
+  },
+  addNumber(num) {
+    dispatch(addAction(num));
+  },
+  getHomeMultidata() {
+    dispatch(fetchHomeMultidataAction);
+  }
+})
+
+export default connect(mapStateToProps, mapDispatchToProps)(Home);
+```
+
+
 
 ## 11.3combineReducers
 
@@ -1940,7 +2310,7 @@ export default reducer;
 
 那么combineReducers是如何实现的呢？
 
-- 事实上，它也是讲我们传入的reducers合并到一个对象中，最终返回一个combination的函数（相当于我们之前的reducer函数了）；
+- 事实上，它也是将我们传入的reducers合并到一个对象中，最终返回一个combination的函数（相当于我们之前的reducer函数了）；
 - 在执行combination函数的过程中，它会通过判断前后返回的数据是否相同来决定返回之前的state还是新的state；
 - 新的state会触发订阅者发生对应的刷新，而旧的state可以有效的组织订阅者发生刷新；
 
