--- a/React/03.ReactRouter.md
+++ b/React/03.ReactRouter.md
@@ -2,17 +2,175 @@
 
 ## 1.1. 认识前端路由
 
+路由其实是网络工程中的一个术语：在架构一个网络时，非常重要的两个设备就是路由器和交换机。
 
+当然，目前在我们生产中路由器也是越来越被大家所熟知，因为我们生活中都会用到路由器：
 
+- 事实上，路由器主要维护的是一个映射表；
+- 映射表会决定数据的流向；
 
+路由的概念出现最早是在后端路由中实现的，原因是web的发展主要经历了这样一些阶段：
 
+- 后端路由阶段；
+- 前后端分离阶段；
+- 单页面富应用（SPA）；
 
+**阶段一：后端路由阶段**
 
+早期的网站开发整个HTML页面是由服务器来渲染的.
 
+- 服务器直接生产渲染好对应的HTML页面, 返回给客户端进行展示.
 
+但是, 一个网站, 这么多页面服务器如何处理呢?
 
+- 一个页面有自己对应的网址, 也就是URL.
+- URL会发送到服务器, 服务器会通过正则对该URL进行匹配, 并且最后交给一个Controller进行处理.
+- Controller进行各种处理, 最终生成HTML或者数据, 返回给前端.
+- 这就完成了一个IO操作.
 
-# 1.react-router介绍
+上面的这种操作, 就是后端路由.
+
+- 当我们页面中需要请求不同的**路径**内容时, 交给服务器来进行处理, 服务器渲染好整个页面, 并且将页面返回给客户端.
+- 这种情况下渲染好的页面, 不需要单独加载任何的js和css, 可以直接交给浏览器展示, 这样也有利于SEO的优化.
+
+后端路由的缺点:
+
+- 一种情况是整个页面的模块由后端人员来编写和维护的.
+- 另一种情况是前端开发人员如果要开发页面, 需要通过PHP和Java等语言来编写页面代码.
+- 而且通常情况下HTML代码和数据以及对应的逻辑会混在一起, 编写和维护都是非常糟糕的事情.
+
+**阶段二：前后端分离阶段**
+
+前端渲染的理解：
+
+- 每次请求涉及到的静态资源都会从静态资源服务器获取，这些资源包括HTML+CSS+JS，然后在前端对这些请求回来的资源进行渲染；
+- 需要注意的是，客户端的每一次请求，都会从静态资源服务器请求文件；
+- 同时可以看到，和之前的后端路由不同，这时后端只是负责提供API了；
+
+前后端分离阶段：
+
+- 随着Ajax的出现, 有了前后端分离的开发模式；
+- 后端只提供API来返回数据，前端通过Ajax获取数据，并且可以通过JavaScript将数据渲染到页面中；
+- 这样做最大的优点就是前后端责任的清晰，后端专注于数据上，前端专注于交互和可视化上；
+- 并且当移动端(iOS/Android)出现后，后端不需要进行任何处理，依然使用之前的一套API即可；
+- 目前很多的网站依然采用这种模式开发（jQuery开发模式）；
+
+**阶段三：单页面富应用（SPA）**
+
+单页面富应用的理解：
+
+- 单页面富应用的英文是single-page application，简称SPA；
+- 整个Web应用只有实际上只有一个页面，当URL发生改变时，并不会从服务器请求新的静态资源；
+- 而是通过JavaScript监听URL的改变，并且根据URL的不同去渲染新的页面；
+
+如何可以应用URL和渲染的页面呢？前端路由
+
+- 前端路由维护着URL和渲染页面的映射关系；
+- 路由可以根据不同的URL，最终让我们的框架（比如Vue、React、Angular）去渲染不同的组件；
+- 最终我们在页面上看到的实际就是渲染的一个个组件页面；
+
+## 1.2. 前端路由原理
+
+前端路由是如何做到URL和内容进行映射呢？监听URL的改变。
+
+**URL的hash**
+
+- URL的hash也就是锚点(#), 本质上是改变window.location的href属性；
+- 我们可以通过直接赋值location.hash来改变href, 但是页面不发生刷新；
+
+```js
+<div id="app">
+  <a href="#/home">home</a>
+  <a href="#/about">about</a>
+  <div class="router-view"></div>
+</div>
+
+<script>
+  // 1.获取router-view
+  const routerViewEl = document.querySelector(".router-view");
+
+  // 2.监听hashchange
+  window.addEventListener("hashchange", () => {
+    switch(location.hash) {
+      case "#/home":
+        routerViewEl.innerHTML = "home";
+        break;
+      case "#/about":
+        routerViewEl.innerHTML = "about";
+        break;
+      default:
+        routerViewEl.innerHTML = "default";
+    }
+  })
+</script>
+```
+
+hash的优势就是兼容性更好，在老版IE中都可以运行，但是缺陷是有一个#，显得不像一个真实的路径。
+
+**HTML5的History**
+
+history接口是HTML5新增的, 它有l六种模式改变URL而不刷新页面：
+
+- replaceState：替换原来的路径；
+- pushState：使用新的路径；
+- popState：路径的回退；
+- go：向前或向后改变路径；
+- forword：向前改变路径；
+- back：向后改变路径；
+
+我们这里来简单演示几个方法：
+
+```js
+<div id="app">
+  <a href="/home">home</a>
+  <a href="/about">about</a>
+  <div class="router-view"></div>
+</div>
+
+<script>
+  // 1.获取router-view
+  const routerViewEl = document.querySelector(".router-view");
+
+  // 2.监听所有的a元素
+  const aEls = document.getElementsByTagName("a");
+  for (let aEl of aEls) {
+    aEl.addEventListener("click", (e) => {
+      e.preventDefault();
+      const href = aEl.getAttribute("href");
+      console.log(href);
+      history.pushState({}, "", href);
+      historyChange();
+    })
+  }
+
+  // 3.监听popstate和go操作
+  window.addEventListener("popstate", historyChange);
+  window.addEventListener("go", historyChange);
+
+  // 4.执行设置页面操作
+  function historyChange() {
+    switch(location.pathname) {
+      case "/home":
+        routerViewEl.innerHTML = "home";
+        break;
+      case "/about":
+        routerViewEl.innerHTML = "about";
+        break;
+      default:
+        routerViewEl.innerHTML = "default";
+    }
+  }
+
+</script>
+```
+
+## 1.3. react-router
+
+目前前端流行的三大框架, 都有自己的路由实现:
+
+- Angular的ngRouter
+- React的ReactRouter
+- Vue的vue-router
 
 React Router的版本4开始，路由不再集中在一个包中进行管理了：
 
@@ -36,24 +194,28 @@ yarn add react-router-dom
 
 react-router最主要的API是给我们提供的一些组件：
 
-- BrowserRouter或HashRouter
+- `BrowserRouter`或`HashRouter`
 
-- - Router中包含了对路径改变的监听，并且会将相应的路径传递给子组件；
+  - Router中包含了对路径改变的监听，并且会将相应的路径传递给子组件；
+
   - BrowserRouter使用history模式；
   - HashRouter使用hash模式；
 
-- Link和NavLink：
+- `Link`和`NavLink`：
 
-- - 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
+  - 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
+
   - NavLink是在Link基础之上增加了一些样式属性（后续学习）；
   - to属性：Link中最重要的属性，用于设置跳转到的路径；
 
-- Route：
+- `Route`：
 
-- - Route用于路径的匹配；
+  - Route用于路径的匹配；
+
   - path属性：用于设置匹配到的路径；
   - component属性：设置匹配到路径后，渲染的组件；
   - exact：精准匹配，只有精准匹配到完全一致的路径，才会渲染对应的组件；
+
 
 在App中进行如下演练:
 
@@ -70,12 +232,14 @@ export default class App extends PureComponent {
   render() {
     return (
       <BrowserRouter>
-      	// link都会显示在页面上，并且渲染成a标签
+        
+        {/*link都会显示在页面上，并且渲染成a标签*/}
         <Link to="/">首页</Link>
         <Link to="/about">关于</Link>
         <Link to="/profile">我的</Link>
-				// Route路径匹配上才会显示
+        {/*Route路径匹配上才会显示*/}
         <Route exact path="/" component={Home} />
+        {/*匹配上/about时，才会渲染About组件*/}
         <Route path="/about" component={About} />
         <Route path="/profile" component={Profile} />
       </BrowserRouter>
