--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -6,16 +6,18 @@
 
 - class组件可以定义自己的state，用来保存组件自己内部的状态；
 
-- - 函数式组件不可以，因为函数每次调用都会产生新的临时变量；
+  - 函数式组件不可以，因为函数每次调用都会产生新的临时变量；
 
 - class组件有自己的生命周期，我们可以在对应的生命周期中完成自己的逻辑；
 
-- - 比如在`componentDidMount`中发送网络请求，并且该生命周期函数只会执行一次；
+  - 比如在`componentDidMount`中发送网络请求，并且该生命周期函数只会执行一次；
+
   - 函数式组件在学习hooks之前，如果在函数中发送网络请求，意味着每次重新渲染都会重新发送一次网络请求；
 
 - class组件可以在状态改变时只会重新执行render函数以及我们希望重新调用的生命周期函数componentDidUpdate等；
 
-- - 函数式组件在重新渲染时，整个函数都会被执行，似乎没有什么地方可以只让它们调用一次；
+  - 函数式组件在重新渲染时，整个函数都会被执行，似乎没有什么地方可以只让它们调用一次；
+
 
 所以，在Hook出现之前，对于上面这些情况我们通常都会编写class组件。
 
@@ -103,6 +105,9 @@ export default function Counter2() {
   ** 本身是一个函数，来自react包
   ** 参数和返回值
   ** 1.参数：第一个参数是给创建出来的状态一个默认值
+  ** 2.返回值为一个数组（只有两个值）：
+  **		第一个值为当前状态
+  **  	第二个值为一个函数，用于设置内部保存的状态
   **/
   const [count, setCount] = useState(0);// count默认值为0
 
@@ -122,14 +127,16 @@ export default function Counter2() {
 
 - useState来自react，需要从react中导入，它是一个hook；
 
-- - 元素一：当前状态的值（第一调用为初始化值）；
+  - 元素一：当前状态的值（第一调用为初始化值）；
+
   - 元素二：设置状态值的函数；
   - 参数：初始化值，如果不设置为undefined；
   - 返回值：数组，包含两个元素；
 
 - 点击button按钮后，会完成两件事情：
 
-- - 调用setCount，设置一个新的值；
+  - 调用setCount，设置一个新的值；
+
   - 组件重新渲染，并且根据新的值返回DOM结构；
 
 - React在重新渲染时，会保留这个state状态，并不会每次都使用初始化值；
@@ -163,7 +170,6 @@ State Hook的API就是 `useState`，我们在前面已经进行了学习：
 
 - **`useState`**是一个数组，我们可以通过数组的解构，来完成赋值会非常方便。
 
-- - https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment
 
 FAQ：为什么叫 `useState` 而不叫 `createState`?
 
@@ -178,16 +184,25 @@ FAQ：为什么叫 `useState` 而不叫 `createState`?
 import React, { useState } from 'react';
 
 export default function Home() {
+  // 定义多个状态
   const [age, setAge] = useState(0);
   const [names, setNames] = useState(["abc", "cba"]);
   const [info, setInfo] = useState({name: "why", age: 18});
-
+  const [students, setStudents] = useState({name: "why", age: 18});
+	
+  // 这样设置值时：无效，因为内部判断值相同，页面就不会重新渲染
   function addFriend() {
-    names.push("nba");
-    console.log(names);
+    names.push("nba");// push方法不会被监听
+    console.log(names);// 此时值是变化了的，
     setNames(names);
   }
-
+	
+  // 动态修改值:这样设置值时就会触发页面渲染
+  function incrementAgeWithIndex(index){
+    const newStudents = [...students]
+    newStudents[index].age += 1
+    setStudents(newStudents)// 每次传递一个新的数组就会被监听
+  }
   return (
     <div>
       <h2>当前年龄: {age}</h2>
@@ -200,12 +215,25 @@ export default function Home() {
           })
         }
       </ul>
+			{/*setNames函数，每次都是做的替换操作，因此需要传递一个数组*/}
       <button onClick={e => setNames([...names, "nba"])}>添加好友</button>
-      {/* 思考: 这样的方式是否可以实现 */}
+      {/* 这样的方式是错误的做法 */}
       <button onClick={addFriend}>添加好友</button>
       <h2>我的信息:</h2>
       <div>我的名字: {info.name}</div>
       <button onClick={e => setInfo({...info, name: "lilei"})}>修改名字</button>
+			<ul>
+        {
+          students.map((item, index) => {
+            return (
+            <li key={item.id}>
+              <span>名字：{item.name}</span>
+							<button onClick={e=>incrementAgeWithIndex(index)}>添加学生</button>
+            </li>
+						)
+          })
+        }
+      </ul>
     </div>
   )
 }
