--- a/React/03.ReactRouter.md
+++ b/React/03.ReactRouter.md
@@ -254,9 +254,9 @@ export default class App extends PureComponent {
 
 这个时候，我们要使用NavLink组件来替代Link组件：
 
-- activeStyle：活跃时（匹配时）的样式；
-- activeClassName：活跃时添加的class；
-- exact：是否精准匹配；
+- `activeStyle`：活跃时（匹配时）的样式；
+- `activeClassName`：活跃时添加的class；
+- `exact`：是否精准匹配；
 
 先演示activeStyle：
 
@@ -307,7 +307,9 @@ a.active {
 <Route exact path="/" component={Home} />
 <Route path="/about" component={About} />
 <Route path="/profile" component={Profile} />
+  // 动态路径
 <Route path="/:userid" component={User}/>
+  // 前面都没匹配上时展示的组件
 <Route component={NoMatch}/>
 ```
 
@@ -338,8 +340,10 @@ Redirect用于路由的重定向，当这个组件出现时，就会执行跳转
 
 - 但是在User界面有一个isLogin用于记录用户是否登录：
 
-- - true：那么显示用户的名称；
+  - true：那么显示用户的名称；
+
   - false：直接重定向到登录界面；
+
 
 App.js中提前定义好Login页面对应的Route：
 
@@ -428,7 +432,7 @@ export default class About extends PureComponent {
 }
 ```
 
-# 7.手动跳转
+# 7.手动路由跳转
 
 目前我们实现的跳转主要是通过Link或者NavLink进行跳转的，实际上我们也可以通过`JavaScript代码`进行跳转。
 
@@ -514,11 +518,9 @@ export default withRouter(App);
 
 ```js
 <div>
- ...其他Link
   <NavLink to="/detail/abc123">详情</NavLink>
 
   <Switch>
-    ... 其他Route
     <Route path="/detail/:id" component={Detail}/>
     <Route component={NoMatch} />
   </Switch>
@@ -620,7 +622,7 @@ export default class Detail2 extends PureComponent {
 
 但是这样的方式会让路由变得非常混乱，我们希望将所有的路由配置放到一个地方进行集中管理：
 
-- 这个时候可以使用react-router-config来完成；
+- 这个时候可以使用`react-router-config`来完成；
 
 安装react-router-config：
 
@@ -652,7 +654,7 @@ const routes = [
     routes: [//子组件
       {
         path: "/about",
-        exact: true,
+        exact: true,// 精确匹配
         component: AboutProduct
       },
       {
