--- a/React/01.React教程.md
+++ b/React/01.React教程.md
@@ -1034,7 +1034,7 @@ export default class App extends Component {
 
 - **布尔类型或 `null`**：页面什么都不会渲染。
 
-**注意**：在jsx中只要首字母大写的元素都会当为组件，例如：`<DIV></DIV>`就会渲染为组件，而不是元素`<div</div>`。
+> **注意**：在jsx中只要首字母大写的元素都会当为组件，例如：`<DIV></DIV>`就会渲染为组件，而不是元素`<div</div>`。
 
 ### 4.1.2创建函数组件
 
@@ -1287,7 +1287,7 @@ class ChildCpn1 extends Component {
     )
   }
 }
-//父组件
+// 父组件
 export default class App extends Component {
   render() {
     return (
@@ -1491,7 +1491,7 @@ index.js代码：
 ```jsx
 import React from "react";
 import ReactDOM from 'react-dom';
-// 引入全局样式：作用与所有子组件
+// 引入全局样式：作用于所有子组件
 import "./style.css";
 
 import App from './App';
@@ -1743,6 +1743,7 @@ export default class App extends Component {
 ```jsx
 import React, { Component } from 'react';
 
+// 封装的组件
 class NavBar extends Component {
   render() {
     const { leftSlot, centerSlot, rightSlot } = this.props;
@@ -2821,14 +2822,17 @@ React给我们提供了一个生命周期方法 `shouldComponentUpdate`（很多
 
 - 该方法有两个参数：
 
-- - 参数一：nextProps 修改之后，最新的props属性
+  - 参数一：nextProps 修改之后，最新的props属性
+
   - 参数二：nextState 修改之后，最新的state属性
 
 - 该方法返回值是一个boolean类型
 
-- - 返回值为true，那么就需要调用render方法；
+  - 返回值为true，那么就需要调用render方法；
+
   - 返回值为false，那么就不需要调用render方法；
   - 默认返回的是true，也就是只要state发生改变，就会调用render方法；
+
 
 ```jsx
 shouldComponentUpdate(nextProps, nextState) {
