--- a/React/03.ReactRouter.md
+++ b/React/03.ReactRouter.md
@@ -202,16 +202,14 @@ react-router最主要的API是给我们提供的一些组件：
   - HashRouter使用hash模式；
 
 - `Link`和`NavLink`：
-
   - 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
-
-  - NavLink是在Link基础之上增加了一些样式属性（后续学习）；
+  
+  - NavLink是在Link基础之上增加了一些样式属性；
   - to属性：Link中最重要的属性，用于设置跳转到的路径；
-
+  
 - `Route`：
-
   - Route用于路径的匹配；
-
+  
   - path属性：用于设置匹配到的路径；
   - component属性：设置匹配到路径后，渲染的组件；
   - exact：精准匹配，只有精准匹配到完全一致的路径，才会渲染对应的组件；
@@ -268,7 +266,7 @@ export default class App extends PureComponent {
 
 但是，我们会发现在选中about或profile时，第一个也会变成红色：
 
-- 原因是/路径也匹配到了/about或/profile；
+- 原因是`/`路径也匹配到了`/about`或`/profile`；
 - 这个时候，我们可以在第一个NavLink中添加上exact属性,代表精确匹配上才显示activeStyle；
 
 ```js
@@ -301,7 +299,7 @@ a.active {
 我们来看下面的路由规则：
 
 - 当我们匹配到某一个路径时，我们会发现有一些问题；
-- 比如/about路径匹配到的同时，`/:userid`也被匹配到了，并且最后的一个NoMatch组件总是被匹配到；
+- 比如`/about`路径匹配到的同时，`/:userid`也被匹配到了，并且最后的一个NoMatch组件总是被匹配到；
 
 ```js
 <Route exact path="/" component={Home} />
@@ -332,7 +330,7 @@ a.active {
 
 # 5.Redirect的使用
 
-Redirect用于路由的重定向，当这个组件出现时，就会执行跳转到对应的to路径中：
+Redirect用于路由的重定向，当这个组件出现时，就会执行跳转到对应的`to`路径中：
 
 我们这里使用这个的一个案例：
 
@@ -374,7 +372,7 @@ export default class User extends PureComponent {
     return this.state.isLogin ? (
       <div>
         <h2>User</h2>
-        <h2>用户名: coderwhy</h2>
+        <h2>用户名: xujian</h2>
       </div>
     ): <Redirect to="/login"/>
   }
@@ -434,7 +432,7 @@ export default class About extends PureComponent {
 
 # 7.手动路由跳转
 
-目前我们实现的跳转主要是通过Link或者NavLink进行跳转的，实际上我们也可以通过`JavaScript代码`进行跳转。
+目前我们实现的跳转主要是通过`Link`或者`NavLink`进行跳转的，实际上我们也可以通过`JavaScript代码`进行跳转。
 
 但是通过`JavaScript代码`进行跳转有一个前提：必须获取到history对象。
 
@@ -450,8 +448,8 @@ export default class About extends PureComponent {
 
 如果我们希望在App组件中获取到history对象，必须满足以下两个条件：
 
-- App组件必须包裹在Router组件之内；
-- App组件使用withRouter高阶组件包裹；
+> 1. App组件必须包裹在Router组件之内；
+> 2. App组件使用withRouter高阶组件包裹；
 
 index.js代码修改如下：
 
@@ -491,6 +489,7 @@ class App extends PureComponent {
   }
 
   pushToProfile() {
+     // 手动跳转到指定路由
     this.props.history.push("/profile");
   }
 }
@@ -502,9 +501,11 @@ export default withRouter(App);
 
 传递参数有三种方式：
 
-- 动态路由的方式；
-- search传递参数；
-- to传入对象；
+1. 动态路由的方式；
+
+2. search传递参数；
+
+3. to传入对象；
 
 ## 8.1动态路由的方式
 
@@ -529,8 +530,8 @@ export default withRouter(App);
 
 detail.js的代码如下：
 
-- 我们可以直接通过match对象中获取id；
-- 这里我们没有使用withRouter，原因是因为Detail本身就是通过路由进行的跳转；
+- 我们可以直接通过`match`对象中获取id；
+- 这里我们没有使用`withRouter`，原因是因为Detail本身就是通过路由进行的跳转；
 
 ```js
 import React, { PureComponent } from 'react'
@@ -630,7 +631,7 @@ export default class Detail2 extends PureComponent {
 yarn add react-router-config
 ```
 
-常见`src/router/index.js`文件：
+创建`src/router/index.js`文件：
 
 ```js
 import Home from "../pages/home";
@@ -691,7 +692,7 @@ const routes = [
 export default routes;
 ```
 
-将之前的Switch配置，换成react-router-config中提供的renderRoutes函数：
+修改app.js文件：将之前的`Switch`配置，换成`react-router-config`中提供的`renderRoutes`函数：
 
 ```js
 //app.js
