--- a/面试/02.Vue面试题整理.md
+++ b/面试/02.Vue面试题整理.md
@@ -1,12 +1,12 @@
-## **1.那你能讲一讲MVVM吗？**
+## 1.那你能讲一讲MVVM吗？
 
 MVVM是`Model-View-ViewModel`缩写，也就是把`MVC`中的`Controller`演变成`ViewModel`。`Model`层代表数据模型，`View`代表UI组件，`ViewModel`是View和Model层的桥梁，数据会绑定到viewModel层并自动将数据渲染到页面中，视图变化的时候会通知viewModel层更新数据。
 
-## **2.简单说一下Vue2.x响应式数据原理**
+## 2.简单说一下Vue2.x响应式数据原理
 
 Vue在初始化数据时，会使用`Object.defineProperty`重新定义data中的所有属性，当页面使用对应属性时，首先会进行依赖收集(收集当前组件的`watcher`)，如果属性发生变化会通知相关依赖进行更新操作(`发布订阅`)。
 
-## **3.那你知道Vue3.x响应式数据原理吗？**
+## 3.那你知道Vue3.x响应式数据原理吗？
 
 Vue3.x改用`Proxy`替代`Object.defineProperty`。因为`Proxy`可以直接监听对象和数组的变化，并且有多达13种拦截方法。并且作为新标准将受到浏览器厂商重点持续的性能优化。
 
@@ -144,25 +144,25 @@ keep-alive的中还运用了`LRU(Least Recently Used)`算法。
 
 ### 加载渲染过程
 
-```
+```js
 父beforeCreate->父created->父beforeMount->子beforeCreate->子created->子beforeMount- >子mounted->父mounted
 ```
 
 ### 子组件更新过程
 
-```
+```js
 父beforeUpdate->子beforeUpdate->子updated->父updated
 ```
 
 ### 父组件更新过程
 
-```
+```js
 父 beforeUpdate -> 父 updated
 ```
 
 ### 销毁过程
 
-```
+```js
 父beforeDestroy->子beforeDestroy->子destroyed->父destroyed
 ```
 
