--- a/面试/03.前端基础拾遗90问.md
+++ b/面试/03.前端基础拾遗90问.md
@@ -22,11 +22,15 @@ console.log(i)      // Uncaught ReferenceError: i is not defined
 
 不过这个问题并没有结束，我们回到`var`和`let/const`的区别上：
 
-- `var`声明的变量会挂到window上，而`let`和`const`不会
-- `var`声明的变量存在变量提升，而`let`和`const`不会
-- `let`和`const`声明形成块作用域，只能在块作用域里访问，不能跨块访问，也不能跨函数访问
-- 同一作用域下`let`和`const`不能声明同名变量，而`var`可以
-- 暂时性死区，`let`和`const`声明的变量不能在声明前被使用
+1. `var`声明的变量会挂到window上，而`let`和`const`不会
+
+2. `var`声明的变量存在变量提升，而`let`和`const`不会
+
+3. `let`和`const`声明形成块作用域，只能在块作用域里访问，不能跨块访问，也不能跨函数访问
+
+4. 同一作用域下`let`和`const`不能声明同名变量，而`var`可以
+
+5. 暂时性死区，`let`和`const`声明的变量不能在声明前被使用
 
 ## 2. 如何在ES5环境下实现const
 
