--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -1,6 +1,6 @@
 # 1.Hook
 
-*Hook* 是 React 16.8 的新增特性，它可以让我们在不编写class的情况下使用state以及其他的React特性（比如生命周期）。
+Hook是 React 16.8 的新增特性，它可以让我们在不编写class的情况下使用state以及其他的React特性（比如生命周期）。
 
 我们先来思考一下`class组件`相对于`函数式组件`有什么优势？比较常见的是下面的优势：
 
@@ -106,7 +106,7 @@ export default function Counter2() {
   ** 参数和返回值
   ** 1.参数：第一个参数是给创建出来的状态一个默认值
   ** 2.返回值为一个数组（只有两个值）：
-  **		第一个值为当前状态
+  **	第一个值为当前状态值
   **  	第二个值为一个函数，用于设置内部保存的状态
   **/
   const [count, setCount] = useState(0);// count默认值为0
@@ -127,11 +127,10 @@ export default function Counter2() {
 
 - useState来自react，需要从react中导入，它是一个hook；
 
-  - 元素一：当前状态的值（第一调用为初始化值）；
-
-  - 元素二：设置状态值的函数；
   - 参数：初始化值，如果不设置为undefined；
   - 返回值：数组，包含两个元素；
+    - 元素一：当前状态的值（第一调用为初始化值）；
+    - 元素二：设置状态值的函数；
 
 - 点击button按钮后，会完成两件事情：
 
@@ -166,9 +165,9 @@ State Hook的API就是 `useState`，我们在前面已经进行了学习：
 
 - **`useState`**会帮助我们定义一个 `state变量`，`useState` 是一种新方法，它与 class 里面的 `this.state` 提供的功能完全相同。一般来说，在函数退出后变量就会”消失”，而 state 中的变量会被 React 保留。
 
-- **`useState`**接受唯一一个参数，在第一次组件被调用时使用来作为初始化值。（如果没有传递参数，那么初始化值为undefined）。
+- **`useState`**接受唯一一个参数，在第一次组件被调用时使用来作为初始化值。（如果没有传递参数，那么初始化值为`undefined`）。
 
-- **`useState`**是一个数组，我们可以通过数组的解构，来完成赋值会非常方便。
+- **`useState`**返回值是一个数组，我们可以通过数组的解构，来完成赋值会非常方便。
 
 
 FAQ：为什么叫 `useState` 而不叫 `createState`?
@@ -176,7 +175,7 @@ FAQ：为什么叫 `useState` 而不叫 `createState`?
 - “Create” 可能不是很准确，因为 state 只在组件首次渲染的时候被创建。
 - 在下一次重新渲染时，`useState` 返回给我们当前的 state。
 - 如果每次都创建新的变量，它就不是 “state”了。
-- 这也是 Hook 的名字*总是*以 `use` 开头的一个原因。
+- 这也是 Hook 的名字总是以 `use` 开头的一个原因。
 
 当然，我们也可以在一个组件中定义多个变量和复杂变量（数组、对象）：
 
@@ -339,7 +338,7 @@ import React, { useState, useEffect } from 'react';
 
 export default function CounterTitle02() {
   const [count, setCount] = useState(0);
-	// 页面渲染完成都会执行
+	// 页面渲染完成都会执行useEffect hook函数
   useEffect(() => {
     document.title = `当前计数: ${count}`;
   })
@@ -452,7 +451,7 @@ export default function MultiUseEffect() {
 
 **Hook 允许我们按照代码的用途分离它们，** 而不是像生命周期函数那样：
 
-- React 将按照 effect 声明的顺序依次调用组件中的*每一个* effect；
+- React 将按照 effect 声明的顺序依次调用组件中的每一个effect；
 
 ## 4.4 Effect性能优化
 
@@ -464,8 +463,8 @@ export default function MultiUseEffect() {
 我们如何决定useEffect在什么时候应该执行和什么时候不应该执行呢？
 
 - useEffect实际上有两个参数：
-- 参数一：执行的回调函数；
-- 参数二：该useEffect在哪些state发生变化时，才重新执行；（受谁的影响）
+  - 参数一：执行的回调函数；
+  - 参数二：该useEffect在哪些state发生变化时，才重新执行；（受谁的影响）
 
 我们来看下面的一个案例：
 
@@ -499,7 +498,7 @@ export default function EffectPerformance() {
 
 但是，如果一个函数我们不希望依赖任何的内容时，也可以传入一个空的数组 []：
 
-- 那么这里的两个回调函数分别对应的就是componentDidMount和componentWillUnmount生命周期函数了；
+- 那么这里的两个回调函数分别对应的就是`componentDidMount`和`componentWillUnmount`生命周期函数了；
 
 ```js
 useEffect(() => {
@@ -577,9 +576,9 @@ export default function ContextHook() {
 
 很多人看到useReducer的第一反应应该是redux的某个替代品，其实并不是。
 
-useReducer仅仅是useState的一种替代方案：
+`useReducer`仅仅是`useState`的一种替代方案：
 
-- 在某些场景下，如果state的处理逻辑比较复杂，我们可以通过useReducer来对其进行拆分；
+- 在某些场景下，如果state的处理逻辑比较复杂，我们可以通过`useReducer`来对其进行拆分；
 - 或者这次修改的state需要依赖之前的state时，也可以使用；
 
 单独创建一个reducer/counter.js文件：
@@ -781,14 +780,14 @@ export default function MemoHookDemo() {
     <div>
       <h2>数字和: {total}</h2>
       <button onClick={e => setCount(count + 1)}>+1</button>
-      {isLogin && <h2>Coderwhy</h2>}
+      {isLogin && <h2>name</h2>}
       <button onClick={e => setIsLogin(!isLogin)}>切换</button>
     </div>
   )
 }
 ```
 
-这个时候，我们可以使用useMemo来进行性能的优化：
+这个时候，我们可以使用`useMemo`来进行性能的优化：
 
 ```js
 import React, { useState, useMemo } from 'react';
@@ -870,7 +869,7 @@ export default function MemoHookDemo() {
       <ShowCounter total={total} />
       <ShowInfo info={info}/>
       <button onClick={e => setCount(count + 1)}>+1</button>
-      {isLogin && <h2>Coderwhy</h2>}
+      {isLogin && <h2>name</h2>}
       <button onClick={e => setIsLogin(!isLogin)}>切换</button>
     </div>
   )
@@ -1390,7 +1389,7 @@ export default function CustomDataStoreHook() {
 useSelector的作用是将state映射到组件中：
 
 - 参数一：将state映射到需要的数据中；
-- 参数二：可以进行比较来决定是否组件重新渲染；（后续讲解）
+- 参数二：可以进行比较来决定是否组件重新渲染；
 
 ```js
 const result: any = useSelector(selector: Function, equalityFn?: Function)
@@ -1441,7 +1440,7 @@ function Profile(props) {
 - 如何比较呢？`const refEquality = (a, b) => a === b`；
 - 也就是我们必须返回两个完全相等的对象才可以不引起重新渲染；
 
-这个时候，我们可以使用react-redux中给我们提供的 shallowEqual：
+这个时候，我们可以使用react-redux中给我们提供的 `shallowEqual`：
 
 - 这段代码的作用是避免不必要的重新渲染；
 
