--- a/面试/03.前端基础拾遗90问.md
+++ b/面试/03.前端基础拾遗90问.md
@@ -82,17 +82,17 @@ function.call(thisArg, arg1, arg2, ...)
 `call()`的原理比较简单，由于函数的this指向它的直接调用者，我们变更调用者即完成this指向的变更：
 
 ```js
-//变更函数调用者示例
+// 变更函数调用者示例
 function foo() {
     console.log(this.name)
 }
 
 // 测试
 const obj = {
-    name: '写代码像蔡徐抻'
+    name: '变更调用者'
 }
 obj.foo = foo   // 变更foo的调用者
-obj.foo()       // '写代码像蔡徐抻'
+obj.foo()       // '变更调用者'
 ```
 
 基于以上原理, 我们两句代码就能实现call()
