--- a/React/01.React教程.md
+++ b/React/01.React教程.md
@@ -4999,7 +4999,7 @@ css modules确实解决了局部作用域的问题，也是很多人喜欢在Rea
 
 但是这种方案也有自己的缺陷：
 
-- 引用的类名，不能使用连接符(.home-title)，在JavaScript中是不识别的；
+- 引用的类名，不能使用连接符(`.home-title`)，在JavaScript中是不识别的；
 - 所有的className都必须使用`{style.className}` 的形式来编写；
 - 不方便动态来修改某些样式，依然需要使用内联样式的方式；
 
@@ -5042,7 +5042,7 @@ css modules确实解决了局部作用域的问题，也是很多人喜欢在Rea
 
 安装styled-components：
 
-```bash
+```js
 yarn add styled-components
 ```
 
@@ -5423,7 +5423,7 @@ export default class App extends PureComponent {
 }
 ```
 
-这个时候我们可以借助于一个第三方的库：classnames
+这个时候我们可以借助于一个第三方的库：`classnames`
 
 - 很明显，这是一个用于动态添加classnames的一个库。
 
@@ -5567,14 +5567,10 @@ import 'antd/dist/antd.less';
 配置别名也需要修改webpack的配置，当然我们也可以借助于 craco 来完成：
 
 ```js
-...
-
 const path = require("path");
 const resolve = dir => path.resolve(__dirname, dir);
 
 module.exports = {
-  ...
-  ,
   webpack: {
     alias: {
       '@': resolve("src"),
@@ -5641,7 +5637,7 @@ CSSTransition是基于Transition组件内置的：
 
 - 它们有三种状态，需要定义对应的CSS样式：
 
-  - 第一类，开始状态：对于的类是-出现，进入，退出；
+  - 第一类，开始状态：对应的类是-出现，进入，退出；
 
   - 第二类：执行动画：对应的类是-出现活跃，进入活跃，退出活跃；
   - 第三类：执行结束：对应的类是-完成，进入，退出
