--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -1,6 +1,6 @@
 # 1.Hook
 
-Hook是 React 16.8 的新增特性，它可以让我们在不编写class的情况下使用state以及其他的React特性（比如生命周期）。
+Hook是 React 16.8 的新增特性，它可以让我们在不编写class组件的情况下使用state以及其他的React特性（比如生命周期）。
 
 我们先来思考一下`class组件`相对于`函数式组件`有什么优势？比较常见的是下面的优势：
 
@@ -1476,7 +1476,7 @@ const store = useStore()
 
 在组件中可以使用store：
 
-```js
+``` js
 const store = useStore();
 console.log(store.getState());
 ```
