--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -605,7 +605,7 @@ obj.p3 // "123abc"
 
 上面代码中，`Object.defineProperties()`同时定义了`obj`对象的三个属性。其中，`p3`属性定义了取值函数`get`，即每次读取该属性，都会调用这个取值函数。
 
-注意，一旦定义了取值函数`get`（或存值函数`set`），就不能将`writable`属性设为`true`，或者同时定义`value`属性，否则会报错。
+> 注意：一旦定义了取值函数`get`（或存值函数`set`），就不能将`writable`属性设为`true`，或者同时定义`value`属性，否则会报错。
 
 ```js
 var obj = {};
@@ -697,7 +697,7 @@ obj.a // 37
 
 上面代码中，`obj.a`的`writable`属性是`false`。然后，改变`obj.a`的值，不会有任何效果。
 
-注意，正常模式下，对`writable`为`false`的属性赋值不会报错，只会默默失败。但是，严格模式下会报错，即使对`a`属性重新赋予一个同样的值。
+> 注意：正常模式下，对`writable`为`false`的属性赋值不会报错，只会默默失败。但是，严格模式下会报错，即使对`a`属性重新赋予一个同样的值。
 
 ```js
 'use strict';
@@ -730,7 +730,7 @@ obj.foo // 'a'
 
 上面代码中，`proto`是原型对象，它的`foo`属性不可写。`obj`对象继承`proto`，也不可以再自定义这个属性了。如果是严格模式，这样做还会抛出一个错误。
 
-但是，有一个规避方法，就是通过覆盖属性描述对象，绕过这个限制。原因是这种情况下，原型链会被完全忽视。
+**但是，有一个规避方法，就是通过覆盖属性描述对象，绕过这个限制。原因是这种情况下，原型链会被完全忽视。**
 
 ```js
 var proto = Object.defineProperty({}, 'foo', {
@@ -790,7 +790,7 @@ JSON.stringify(obj) // "{}"
 
 上面代码中，`obj.x`属性的`enumerable`为`false`，所以一般的遍历操作都无法获取该属性，使得它有点像“秘密”属性，但不是真正的私有属性，还是可以直接获取它的值。
 
-> 注意，`for...in`循环包括继承的属性，`Object.keys`方法不包括继承的属性。如果需要获取对象自身的所有属性，不管是否可遍历，可以使用`Object.getOwnPropertyNames`方法。
+> 注意：`for...in`循环包括继承的属性，`Object.keys`方法不包括继承的属性。如果需要获取对象自身的所有属性，不管是否可遍历，可以使用`Object.getOwnPropertyNames`方法。
 
 另外，`JSON.stringify`方法会排除`enumerable`为`false`的属性，有时可以利用这一点。如果对象的 JSON 格式输出要排除某些属性，就可以把这些属性的`enumerable`设为`false`。
 
@@ -821,7 +821,7 @@ Object.defineProperty(obj, 'p', {configurable: true})
 
 上面代码中，`obj.p`的`configurable`为`false`。然后，改动`value`、`writable`、`enumerable`、`configurable`，结果都报错。
 
-注意，`writable`只有在`false`改为`true`会报错，`true`改为`false`是允许的。
+> 注意：`writable`只有在`false`改为`true`会报错，`true`改为`false`是允许的。
 
 ```js
 var obj = Object.defineProperty({}, 'p', {
@@ -924,7 +924,7 @@ var obj = {
 
 上面的写法与定义属性描述对象是等价的，而且使用更广泛。
 
-注意:取值函数`get`不能接受参数，存值函数`set`只能接受一个参数（即属性的值）。
+> 注意:取值函数`get`不能接受参数，存值函数`set`只能接受一个参数（即属性的值）。
 
 存取器往往用于，属性的值依赖对象内部数据的场合。
 
@@ -1284,7 +1284,7 @@ var arr = new Array(1, 2);
 var arr = [1, 2];
 ```
 
-注意，如果参数是一个正整数，返回数组的成员都是空位。虽然读取的时候返回`undefined`，但实际上该位置没有任何值。虽然可以取到`length`属性，但是取不到键名。
+> 注意：如果参数是一个正整数，返回数组的成员都是空位。虽然读取的时候返回`undefined`，但实际上该位置没有任何值。虽然可以取到`length`属性，但是取不到键名。
 
 ```js
 var a = new Array(3);
@@ -1485,7 +1485,7 @@ Array.prototype.join.call(obj, '-')
 // [1, 2, 3, 4, 5, 6]
 ```
 
-**如果数组成员包括对象，`concat`方法返回当前数组的一个浅拷贝**。==所谓浅拷贝，指的是新数组拷贝的是对象的引用==。
+**如果数组成员包括对象，`concat`方法返回当前数组的一个浅拷贝**。所谓浅拷贝，指的是新数组拷贝的是对象的引用。
 
 ```js
 var obj = { a: 1 };
@@ -1660,7 +1660,7 @@ a // [1, 2]
 // ]
 ```
 
-> 注意，自定义的排序函数应该返回数值，否则不同的浏览器可能有不同的实现，不能保证结果都一致。
+> 注意：自定义的排序函数应该返回数值，否则不同的浏览器可能有不同的实现，不能保证结果都一致。
 
 ```js
 // bad
@@ -1876,7 +1876,7 @@ arr.every(function (elem, index, arr) {
 
 上面代码中，数组`arr`并非所有成员大于等于`3`，所以返回`false`。
 
-> 注意，对于空数组，`some`方法返回`false`，`every`方法返回`true`，回调函数都不会执行。
+> 注意：对于空数组，`some`方法返回`false`，`every`方法返回`true`，回调函数都不会执行。
 
 ```js
 function isEven(x) { return x % 2 === 0 }
@@ -2119,7 +2119,7 @@ strObj.length // 3
 
 上面代码中，字符串`abc`的包装对象提供了多个属性，`length`只是其中之一。
 
-==自动转换生成的包装对象是只读的，无法修改==。所以，字符串无法添加新属性。
+自动转换生成的包装对象是只读的，无法修改。所以，字符串无法添加新属性。
 
 ```js
 var s = 'Hello World';
@@ -2487,7 +2487,7 @@ Number.prototype.iterate = function () {
 
 上面代码在`Number`对象的原型上部署了`iterate`方法，将一个数值自动遍历为一个数组。
 
-> 注意，数值的自定义方法，只能定义在它的原型对象`Number.prototype`上面，数值本身是无法自定义属性的。
+> 注意：数值的自定义方法，只能定义在它的原型对象`Number.prototype`上面，数值本身是无法自定义属性的。
 
 ```js
 var n = 1;
@@ -2501,7 +2501,7 @@ n.x // undefined
 
 ### 7.1概述
 
-`String`对象是 JavaScript 原生提供的三个包装对象之一，==用来生成字符串对象==。
+`String`对象是 JavaScript 原生提供的三个包装对象之一，用来生成字符串对象。
 
 ```js
 var s1 = 'abc';
@@ -2539,7 +2539,7 @@ String(5) // "5"
 
 #### 7.2.1.`String.fromCharCode()`
 
-`String`对象提供的静态方法（即定义在对象本身，而不是定义在对象实例的方法），主要是`String.fromCharCode()`。该方法的参数是一个或多个数值，代表 Unicode 码点，==返回值是这些码点组成的字符串==。
+`String`对象提供的静态方法（即定义在对象本身，而不是定义在对象实例的方法），主要是`String.fromCharCode()`。该方法的参数是一个或多个数值，代表 Unicode 码点，返回值是这些码点组成的字符串。
 
 ```js
 String.fromCharCode() // ""
