--- a/React/02.Redux.md
+++ b/React/02.Redux.md
@@ -995,7 +995,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 将之前自己创建的Context的Provider，换成react-redux的Provider组件；
 
-**注意**：这里传入的是store属性，而不是value属性（待会儿可以在源码中查看）;
+> **注意**：这里传入的是store属性，而不是value属性（待会儿可以在源码中查看）;
 
 ```js
 // 从react-redux库导入Provider
@@ -1447,7 +1447,7 @@ export default connect(mapStateToProps, mapDispatchToProps)(Home);
 
 我们之前讲过，redux可以方便的让我们对状态进行跟踪和调试，那么如何做到呢？
 
-- redux官网为我们提供了redux-devtools的工具；
+- redux官网为我们提供了`redux-devtools`的工具；
 - 利用这个工具，我们可以知道每次状态是如何被修改的，修改前后的状态变化等等；
 
 安装该工具需要两步：
