--- a/React/03.ReactRouter.md
+++ b/React/03.ReactRouter.md
@@ -195,12 +195,11 @@ yarn add react-router-dom
 react-router最主要的API是给我们提供的一些组件：
 
 - `BrowserRouter`或`HashRouter`
-
   - Router中包含了对路径改变的监听，并且会将相应的路径传递给子组件；
-
+  
   - BrowserRouter使用history模式；
   - HashRouter使用hash模式；
-
+  
 - `Link`和`NavLink`：
   - 通常路径的跳转是使用Link组件，最终会被渲染成a元素；
   
@@ -248,7 +247,7 @@ export default class App extends PureComponent {
 
 # 3.NavLink的使用
 
-**路径选中时，对应的a元素变为红色**
+路径选中时，对应的a元素变为红色。
 
 这个时候，我们要使用NavLink组件来替代Link组件：
 
@@ -434,7 +433,7 @@ export default class About extends PureComponent {
 
 目前我们实现的跳转主要是通过`Link`或者`NavLink`进行跳转的，实际上我们也可以通过`JavaScript代码`进行跳转。
 
-但是通过`JavaScript代码`进行跳转有一个前提：必须获取到history对象。
+> 但是通过`JavaScript代码`进行跳转有一个前提：必须获取到`history`对象。
 
 如何可以获取到history的对象呢？两种方式
 
