--- a/React/04.Hook.md
+++ b/React/04.Hook.md
@@ -445,9 +445,9 @@ export default function MultiUseEffect() {
 }
 ```
 
-**Hook 允许我们按照代码的用途分离它们，** 而不是像生命周期函数那样：
+**Hook 允许我们按照代码的用途分离它们，** 而不是像生命周期函数那样。
 
-- React 将按照 effect 声明的顺序依次调用组件中的每一个effect；
+> React 将按照 effect 声明的顺序依次调用组件中的每一个effect；
 
 ## 4.4 Effect性能优化
 
@@ -473,7 +473,7 @@ export default function EffectPerformance() {
   const [count, setCount] = useState(0);
   const [show, setShow] = useState(true);
 	
-  // 只有count变化时才会执行这个回调函数
+  // 只有依赖的count变化时才会执行这个回调函数
   useEffect(() => {
     console.log("修改DOM");
   }, [count])
@@ -492,9 +492,9 @@ export default function EffectPerformance() {
 }
 ```
 
-但是，如果一个函数我们不希望依赖任何的内容时，也可以传入一个空的数组 []：
+但是，如果一个函数我们不希望依赖任何的内容时，也可以传入一个空的数组。
 
-- 那么这里的两个回调函数分别对应的就是`componentDidMount`和`componentWillUnmount`生命周期函数了；
+这里的两个回调函数分别对应的就是`componentDidMount`和`componentWillUnmount`生命周期函数了；
 
 ```js
 useEffect(() => {
@@ -566,7 +566,7 @@ export default function ContextHook() {
 }
 ```
 
-注意事项：当组件上层最近的 `<MyContext.Provider>` 更新时，该 Hook 会触发重新渲染，并使用最新传递给 `MyContext` provider 的 context `value` 值。
+> 注意：当组件上层最近的 `<MyContext.Provider>` 更新时，该 Hook 会触发重新渲染，并使用最新传递给 `MyContext` provider 的 context `value` 值。
 
 # 6.useReducer
 
@@ -1179,9 +1179,7 @@ function useLoggingLife(name) {
 }
 ```
 
-## 12.1自定义Hook练习
-
-我们通过一些案例来练习一下自定义Hook。
+## 12.1共享context HOOk
 
 **使用User、Token的Context**
 
@@ -1240,7 +1238,7 @@ export default function CustomHookContextDemo() {
 }
 ```
 
-**获取窗口滚动的位置**
+## 12.2获取窗口滚动的位置
 
 在开发中，某些场景我们可能总是希望获取创建滚动的位置：
 
@@ -1310,7 +1308,7 @@ export default function CustomScrollPositionHook() {
 }
 ```
 
-**数据存储的localStorage**
+## 12.3数据存储的localStorage
 
 在开发中，我们会有一些数据希望通过localStorage进行存储（当然，你可以根据自己的情况选择sessionStorage）
 
@@ -1476,3 +1474,4 @@ const store = useStore()
 const store = useStore();
 console.log(store.getState());
 ```
+
