--- a/面试/01.Vue3面试题.md
+++ b/面试/01.Vue3面试题.md
@@ -28,31 +28,31 @@ MVVM 与 MVC 最大的区别就是：它实现了 View 和 Model 的自动同步
 
 # 3. Vue 组件通讯有哪几种方式
 
-1. props 和$emit 父组件向子组件传递数据是通过 prop 传递的，子组件传递数据给父组件是通过$emit 触发事件来做到的
+1. `props` 和`$emit`： 父组件向子组件传递数据是通过 prop 传递的，子组件传递数据给父组件是通过$emit 触发事件来做到的。
 
-2. `$parent`,`$children` 获取当前组件的父组件和当前组件的子组件
+2. `$parent`,`$children` ：获取当前组件的父组件和当前组件的子组件。
 
-3. `$attrs` 和`$listeners` A->B->C。Vue 2.4 开始提供了$attrs 和$listeners 来解决这个问题
+3. `$attrs` 和`$listeners`： A->B->C。Vue 2.4 开始提供了`$attrs` 和`$listeners` 来解决这个问题。
 
-4. 父组件中通过 provide 来提供变量，然后在子组件中通过 inject 来注入变量。(官方不推荐在实际业务中使用，但是写组件库时很常用)
+4. 父组件中通过 provide 来提供变量，然后在子组件中通过 inject 来注入变量。(官方不推荐在实际业务中使用，但是写组件库时很常用)。
 
-5. $refs 获取组件实例
+5. $refs 获取组件实例。
 
-6. envetBus 兄弟组件数据传递 这种情况下可以使用事件总线的方式
+6. envetBus 兄弟组件数据传递 这种情况下可以使用事件总线的方式。
 
-7. vuex 状态管理
+7. vuex 状态管理。
 
 # 4 Vue 的生命周期方法有哪些 一般在哪一步发请求
 
-**beforeCreate** 在实例初始化之后，数据观测(data observer) 和 event/watcher 事件配置之前被调用。在当前阶段 data、methods、computed 以及 watch 上的数据和方法都不能被访问
+**beforeCreate** 在实例初始化之后，数据观测(data observer) 和 event/watcher 事件配置之前被调用。在当前阶段 data、methods、computed 以及 watch 上的数据和方法都不能被访问。
 
-**created** 实例已经创建完成之后被调用。在这一步，实例已完成以下的配置：数据观测(data observer)，属性和方法的运算， watch/event 事件回调。这里没有$el,如果非要想与 Dom 进行交互，可以通过 vm.$nextTick 来访问 Dom
+**created** 实例已经创建完成之后被调用。在这一步，实例已完成以下的配置：数据观测(data observer)，属性和方法的运算， watch/event 事件回调。这里没有`$el`,如果非要想与 Dom 进行交互，可以通过 vm.$nextTick 来访问 Dom。
 
 **beforeMount** 在挂载开始之前被调用：相关的 render 函数首次被调用。
 
-**mounted** 在挂载完成后发生，在当前阶段，真实的 Dom 挂载完毕，数据完成双向绑定，可以访问到 Dom 节点
+**mounted** 在挂载完成后发生，在当前阶段，真实的 Dom 挂载完毕，数据完成双向绑定，可以访问到 Dom 节点。
 
-**beforeUpdate** 数据更新时调用，发生在虚拟 DOM 重新渲染和打补丁（patch）之前。可以在这个钩子中进一步地更改状态，这不会触发附加的重渲染过程
+**beforeUpdate** 数据更新时调用，发生在虚拟 DOM 重新渲染和打补丁（patch）之前。可以在这个钩子中进一步地更改状态，这不会触发附加的重渲染过程。
 
 **updated** 发生在更新完成之后，当前阶段组件 Dom 已完成更新。要注意的是避免在此期间更改数据，因为这可能会导致无限循环的更新，该钩子在服务器端渲染期间不被调用。
 
@@ -60,9 +60,9 @@ MVVM 与 MVC 最大的区别就是：它实现了 View 和 Model 的自动同步
 
 **destroyed** Vue 实例销毁后调用。调用后，Vue 实例指示的所有东西都会解绑定，所有的事件监听器会被移除，所有的子实例也会被销毁。 该钩子在服务器端渲染期间不被调用。
 
-**activated** keep-alive 专属，组件被激活时调用
+**activated** keep-alive 专属，组件被激活时调用。
 
-**deactivated** keep-alive 专属，组件被销毁时调用
+**deactivated** keep-alive 专属，组件被销毁时调用。
 
 > 异步请求在哪一步发起？
 
@@ -91,7 +91,7 @@ v-show 适用于需要非常频繁切换条件的场景
 
 数据总是从父组件传到子组件，子组件没有权利修改父组件传过来的数据，只能请求父组件对原始数据进行修改。这样会防止从子组件意外改变父级组件的状态，从而导致你的应用的数据流向难以理解。
 
-如果实在要改变父组件的 prop 值 可以再 data 里面定义一个变量 并用 prop 的值初始化它 之后用$emit 通知父组件去修改。
+如果实在要改变父组件的 prop 值，可以再在data 里面定义一个变量 并用 prop 的值初始化它 之后用`$emit` 通知父组件去修改。
 
 # 7.computed 和 watch 的区别和运用的场景
 
@@ -378,9 +378,9 @@ let map = makeIndexByKey(oldCh);
 
 # 17 Vue 事件绑定原理
 
-原生事件绑定是通过 addEventListener 绑定给真实元素的，组件事件绑定是通过 Vue 自定义的$on 实现的。如果要在组件上使用原生事件，需要加.native 修饰符，这样就相当于在父组件中把子组件当做普通 html 标签，然后加上原生事件。
+原生事件绑定是通过 addEventListener 绑定给真实元素的，组件事件绑定是通过 Vue 自定义的$on 实现的。如果要在组件上使用原生事件，需要加`.native` 修饰符，这样就相当于在父组件中把子组件当做普通 html 标签，然后加上原生事件。
 
-$on、$emit 是基于发布订阅模式的，维护一个事件中心，on 的时候将事件按名称存在事件中心里，称之为订阅者，然后 emit 将对应的事件进行发布，去执行事件中心里的对应的监听器。
+`$on`、`$emit` 是基于发布订阅模式的，维护一个事件中心，on 的时候将事件按名称存在事件中心里，称之为订阅者，然后 emit 将对应的事件进行发布，去执行事件中心里的对应的监听器。
 
 # 18. vue-router 路由钩子函数是什么 执行顺序是什么
 
@@ -679,9 +679,9 @@ export default {
 
 了解 Vue 响应式原理的同学都知道在两种情况下修改数据 Vue 是不会触发视图更新的
 
-1.在实例创建之后添加新的属性到实例上（给响应式对象新增属性）
+1. 在实例创建之后添加新的属性到实例上（给响应式对象新增属性）
 
-2.直接更改数组下标来修改数组的值
+2. 直接更改数组下标来修改数组的值
 
 Vue.set 或者说是$set 原理如下
 
