--- a/javascript/基础/07.异步操作.md
+++ b/javascript/基础/07.异步操作.md
@@ -209,7 +209,7 @@ series(items.shift());
 
 上面代码中，函数`series`就是串行函数，它会依次执行异步任务，所有任务都完成后，才会执行`final`函数。`items`数组保存每一个异步任务的参数，`results`数组保存每一个异步任务的运行结果。
 
-注意，上面的写法需要六秒，才能完成整个脚本。
+> 注意：上面的写法需要六秒，才能完成整个脚本。
 
 #### 1.5.2并行执行
 
