--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -131,7 +131,7 @@ Fubar(1, 2)._foo // 1
 3. 将这个空对象赋值给函数内部的`this`关键字。
 4. 开始执行构造函数内部的代码。
 
-也就是说，构造函数内部，`this`指的是一个新生成的空对象，所有针对`this`的操作，都会发生在这个空对象上。==构造函数之所以叫“构造函数”，就是说这个函数的目的，就是操作一个空对象（即`this`对象），将其“构造”为需要的样子==。
+也就是说，构造函数内部，`this`指的是一个新生成的空对象，所有针对`this`的操作，都会发生在这个空对象上。**构造函数之所以叫“构造函数”，就是说这个函数的目的，就是操作一个空对象（即`this`对象），将其“构造”为需要的样子**。
 
 如果构造函数内部有`return`语句，而且`return`后面跟着一个对象，`new`命令会返回`return`语句指定的对象；否则，就会不管`return`语句，返回`this`对象。
 
@@ -253,9 +253,9 @@ person2.greeting() // Hi! I'm 张三.
 
 `this`关键字是一个非常重要的语法点。毫不夸张地说，不理解它的含义，大部分开发任务都无法完成。
 
-前一章已经提到，`this`可以用在构造函数之中，表示实例对象。除此之外，`this`还可以用在别的场合。但不管是什么场合，`this`都有一个共同点：==它总是返回一个对象==。
+前一章已经提到，`this`可以用在构造函数之中，表示实例对象。除此之外，`this`还可以用在别的场合。但不管是什么场合，`this`都有一个共同点：**它总是返回一个对象**。
 
-> ==**简单说，`this`就是属性或方法“当前”所在的对象。**==
+> 简单说，`this`就是属性或方法“当前”所在的对象。
 
 ```js
 this.property
@@ -355,7 +355,7 @@ function validate(obj, lowval, hival){
 
 上面代码是一个文本输入框，每当用户输入一个值，就会调用`onChange`回调函数，验证这个值是否在指定范围。浏览器会向回调函数传入当前对象，因此`this`就代表传入当前对象（即文本框），然后就可以从`this.value`上面读到用户的输入值。
 
-总结一下，==JavaScript 语言之中，一切皆对象，运行环境也是对象，所以函数都是在某个对象之中运行，`this`就是函数运行时所在的对象（环境）==。这本来并不会让用户糊涂，但是 JavaScript 支持运行环境动态切换，也就是说，`this`的指向是动态的，没有办法事先确定到底指向哪个对象，这才是最让初学者感到困惑的地方。
+> 总结一下，JavaScript 语言之中，一切皆对象，运行环境也是对象，所以函数都是在某个对象之中运行，`this`就是函数运行时所在的对象（环境）。这本来并不会让用户糊涂，但是 JavaScript 支持运行环境动态切换，也就是说，`this`的指向是动态的，没有办法事先确定到底指向哪个对象，这才是最让初学者感到困惑的地方。
 
 ### 2.2实质
 
@@ -422,7 +422,7 @@ var f = function () {
 
 上面代码中，函数体里面使用了变量`x`。该变量由运行环境提供。
 
-现在问题就来了，由于函数可以在不同的运行环境执行，所以需要有一种机制，能够在函数体内部获得当前的运行环境（context）。==所以，`this`就出现了，它的设计目的就是在函数体内部，指代函数当前的运行环境==。
+现在问题就来了，由于函数可以在不同的运行环境执行，所以需要有一种机制，能够在函数体内部获得当前的运行环境（context）。**所以，`this`就出现了，它的设计目的就是在函数体内部，指代函数当前的运行环境**。
 
 ```js
 var f = function () {
@@ -469,7 +469,7 @@ function f() {
 f() // true
 ```
 
-上面代码说明，==不管是不是在函数内部，只要是在全局环境下运行，`this`就是指顶层对象`window`。==
+> 上面代码说明，不管是不是在函数内部，只要是在全局环境下运行，`this`就是指顶层对象`window`。
 
 #### 2.3.2构造函数
 
@@ -490,7 +490,7 @@ o.p // "Hello World!"
 
 #### 2.3.3对象的方法
 
-> 如果对象的方法里面包含`this`，`this`的指向就是方法运行时所在的对象。该方法赋值给另一个对象，就会改变`this`的指向。
+如果对象的方法里面包含`this`，`this`的指向就是方法运行时所在的对象。该方法赋值给另一个对象，就会改变`this`的指向。
 
 但是，这条规则很不容易把握。请看下面的代码。
 
