--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -831,7 +831,7 @@ add.call(this, 1, 2) // 3
 
 上面代码中，`call`方法指定函数`add`内部的`this`绑定当前环境（对象），并且参数为`1`和`2`，因此函数`add`运行后得到`3`。
 
-> ==`call`方法的一个应用是调用对象的原生方法==。
+> `call`方法的一个应用是调用对象的原生方法。
 
 ```js
 var obj = {};
@@ -1230,7 +1230,7 @@ cat1.meow === cat2.meow
 
 JavaScript 继承机制的设计思想就是，**原型对象的所有属性和方法，都能被实例对象共享**。也就是说，如果属性和方法定义在原型上，那么所有实例对象就能共享，不仅节省了内存，还体现了实例对象之间的联系。
 
-下面，先看怎么为对象指定原型。==JavaScript 规定，每个函数都有一个`prototype`属性，指向一个对象。==
+下面，先看怎么为对象指定原型。JavaScript 规定，每个函数都有一个`prototype`属性，指向一个对象。
 
 ```js
 function f() {}
@@ -1265,7 +1265,7 @@ cat1.color // "yellow"
 cat2.color // "yellow"
 ```
 
-上面代码中，原型对象的`color`属性的值变为`yellow`，两个实例对象的`color`属性立刻跟着变了。这是因为实例对象其实没有`color`属性，都是读取原型对象的`color`属性。==也就是说，当实例对象本身没有某个属性或方法的时候，它会到原型对象去寻找该属性或方法。==这就是原型对象的特殊之处。
+上面代码中，原型对象的`color`属性的值变为`yellow`，两个实例对象的`color`属性立刻跟着变了。这是因为实例对象其实没有`color`属性，都是读取原型对象的`color`属性。也就是说，当实例对象本身没有某个属性或方法的时候，它会到原型对象去寻找该属性或方法。这就是原型对象的特殊之处。
 
 > 如果实例对象自身就有某个属性或方法，它就不会再去原型对象寻找这个属性或方法。
 
@@ -1291,7 +1291,7 @@ Animal.prototype.walk = function () {
 
 #### 3.1.3.原型链
 
-JavaScript 规定，所有对象都有自己的原型对象（prototype）。一方面，任何一个对象，都可以充当其他对象的原型；另一方面，由于原型对象也是对象，所以它也有自己的原型。因此，就会形成一个“原型链”（prototype chain）：对象到原型，再到原型的原型……
+JavaScript 规定，所有对象都有自己的原型对象（prototype）。一方面，任何一个对象，都可以充当其他对象的原型；另一方面，由于原型对象也是对象，所以它也有自己的原型。因此，就会形成一个**原型链**（prototype chain）：对象到原型，再到原型的原型……
 
 如果一层层地上溯，所有对象的原型最终都可以上溯到`Object.prototype`，即`Object`构造函数的`prototype`属性。也就是说，所有对象都继承了`Object.prototype`的属性。这就是所有对象都有`valueOf`和`toString`方法的原因，因为这是从`Object.prototype`继承的。
 
@@ -1304,9 +1304,9 @@ Object.getPrototypeOf(Object.prototype)
 
 上面代码表示，`Object.prototype`对象的原型是`null`，由于`null`没有任何属性，所以原型链到此为止。`Object.getPrototypeOf`方法返回参数对象的原型，具体介绍请看后文。
 
-读取对象的某个属性时，JavaScript 引擎先寻找对象本身的属性，如果找不到，就到它的原型去找，如果还是找不到，就到原型的原型去找。如果直到最顶层的`Object.prototype`还是找不到，则返回`undefined`。如果对象自身和它的原型，都定义了一个同名属性，那么优先读取对象自身的属性，这叫做“覆盖”（overriding）。
+读取对象的某个属性时，JavaScript 引擎先寻找对象本身的属性，如果找不到，就到它的原型去找，如果还是找不到，就到原型的原型去找。如果直到最顶层的`Object.prototype`还是找不到，则返回`undefined`。如果对象自身和它的原型，都定义了一个同名属性，那么优先读取对象自身的属性，这叫做**覆盖**（overriding）。
 
-注意，一级级向上，在整个原型链上寻找某个属性，对性能是有影响的。所寻找的属性在越上层的原型对象，对性能的影响越大。如果寻找某个不存在的属性，将会遍历整个原型链。
+> 注意：一级级向上，在整个原型链上寻找某个属性，对性能是有影响的。所寻找的属性在越上层的原型对象，对性能的影响越大。如果寻找某个不存在的属性，将会遍历整个原型链。
 
 举例来说，如果让构造函数的`prototype`属性指向一个数组，就意味着实例对象可以调用数组方法。
 
@@ -1492,7 +1492,7 @@ y instanceof Object // true
 
 上面代码中，`instanceof`运算符判断，变量`x`是数组，变量`y`是对象。
 
-> 注意，`instanceof`运算符只能用于对象，不适用原始类型的值。
+> 注意:`instanceof`运算符只能用于对象，不适用原始类型的值。
 
 ```js
 var s = 'hello';
@@ -1717,7 +1717,7 @@ StringBuilder.prototype = {
 
 #### 3.5.3封装私有变量：立即执行函数的写法
 
-另一种做法是使用“立即执行函数”（Immediately-Invoked Function Expression，IIFE），将相关的属性和方法封装在一个函数作用域里面，可以达到不暴露私有成员的目的。
+另一种做法是使用**立即执行函数**（Immediately-Invoked Function Expression，IIFE），将相关的属性和方法封装在一个函数作用域里面，可以达到不暴露私有成员的目的。
 
 ```js
 var module1 = (function () {
@@ -2131,7 +2131,7 @@ Date.hasOwnProperty('toString') // false
 
 上面代码表明，`Date.length`（构造函数`Date`可以接受多少个参数）是`Date`自身的属性，`Date.toString`是继承的属性。
 
-另外，`hasOwnProperty`方法是 JavaScript 之中唯一一个处理对象属性时，不会遍历原型链的方法。
+> 另外，`hasOwnProperty`方法是 JavaScript 之中唯一一个处理对象属性时，不会遍历原型链的方法。
 
 ### 4.9`in` 运算符和 `for...in` 循环
 
@@ -2241,3 +2241,4 @@ function copyObject(orig) {
 ```
 
 ## 5.严格模式
+
